fix switch for dark mode

--- a/gtk-3.22/elementaryX.css
+++ b/gtk-3.22/elementaryX.css
@@ -196,7 +196,7 @@ switch:checked {
             ),
             @colorSwitch
         );
-    border-color: shade (@colorSwitch, 0.75);
+    border-color: shade (@colorSwitch, 0.85);
 }
 
 
